# cradex

./: IDEA_AND_PLAN.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/method/: cra.yaml  curriculum_dr.yaml  full_dr.yaml  full_dr_large.yaml  rma.yaml  rma_large.yaml
configs/task/: in_hand_rotation.yaml
cra/: __init__.py
cra/algo/: __init__.py  ppo.py  rollout_buffer.py
cra/envs/: __init__.py  axis_dr.py  base_env.py  rewards.py  shadow_hand_rotation.py
cra/models/: __init__.py  adaptation_encoder.py  base_policy.py  baselines.py  cra_policy.py  residual_head.py
cra/trainer/: __init__.py  baseline_trainer.py  cra_trainer.py
cra/utils/: __init__.py  analysis.py  checkpoint.py  logger.py  obs_normalizer.py
scripts/: ablation_ordering.py  benchmark.py  download_assets.py  eval.py  eval_compositional.py  test_env_standalone.py  train.py  visualize_adaptation.py
